# sre-openenv

./: Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
backend/: main.py
frontend/src/components/: SREVisualizer.tsx
server/: app.py  environment.py
