[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-openenv-simulation"
version = "0.1.0"
description = "A high-fidelity SRE simulation environment for AI training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "requests",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest", "black"]
